--- a/website/src/assets/css/styles.css
+++ b/website/src/assets/css/styles.css
@@ -594,11 +594,6 @@ video {
           animation: button 3s infinite;
 }
 
-.offer-container {
-  grid-template-rows: -webkit-max-content 224px;
-  grid-template-rows: max-content 224px;
-}
-
 .visible {
   visibility: visible;
 }
@@ -734,9 +729,23 @@ body {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+@media (min-width: 1024px) {
+  .shape-small {
+    height: 12rem;
+    width: 12rem;
+  }
+}
+
 .shape-big {
   height: 400px;
   width: 400px;
+}
+
+@media (min-width: 1024px) {
+  .shape-big {
+    height: 500px;
+    width: 500px;
+  }
 }
 
 /** TITLE **/
@@ -930,6 +939,11 @@ body {
   background-color: rgb(28 26 31 / var(--tw-bg-opacity));
 }
 
+.active {
+  --tw-text-opacity: 1;
+  color: rgb(218 175 4 / var(--tw-text-opacity));
+}
+
 /** HOME **/
 
 .home {
@@ -1043,6 +1057,13 @@ body {
        column-gap: 4rem;
 }
 
+@media (min-width: 1024px) {
+  .home-content {
+    -moz-column-gap: 7rem;
+         column-gap: 7rem;
+  }
+}
+
 .home-data {
   text-align: center;
 }
@@ -1075,11 +1096,26 @@ body {
   padding: 0.25rem;
 }
 
+@media (min-width: 1024px) {
+  .home-data span {
+    height: 2.5rem;
+    width: 2.5rem;
+    padding: 0.5rem;
+  }
+}
+
 .home-data span i {
   font-size: 0.875rem !important;
   line-height: 1.25rem !important;
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+@media (min-width: 1024px) {
+  .home-data span i {
+    font-size: 1.25rem !important;
+    line-height: 1.75rem !important;
+  }
 }
 
 .home-button {
@@ -1194,6 +1230,12 @@ body {
 }
 
 @media (min-width: 768px) {
+  .brand-container {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
   .brand-container {
     grid-template-columns: repeat(6, minmax(0, 1fr));
   }
@@ -1462,7 +1504,6 @@ body {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
   gap: 1.5rem;
-  row-gap: 6rem;
 }
 
 @media (min-width: 768px) {
@@ -1471,18 +1512,44 @@ body {
   }
 }
 
+@media (min-width: 1024px) {
+  .about-container {
+    align-items: center;
+    gap: 7rem;
+  }
+}
+
 .about-group {
   position: relative;
 }
 
-.about-group img {
-  width: 400px;
-  border-radius: 0.5rem;
+@media (min-width: 640px) {
+  .about-group {
+    width: 450px;
+    justify-self: center;
+  }
 }
 
 @media (min-width: 768px) {
+  .about-group {
+    width: 350px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .about-group {
+    width: 480px;
+  }
+}
+
+.about-group img {
+  width: 380px;
+  border-radius: 0.5rem;
+}
+
+@media (min-width: 1024px) {
   .about-group img {
-    width: 600px;
+    width: 480px;
   }
 }
 
@@ -1509,6 +1576,12 @@ body {
   }
 }
 
+@media (min-width: 1024px) {
+  .about-card {
+    width: 220px;
+  }
+}
+
 .about-card h3 {
   margin-bottom: 0.5rem;
   font-size: 1.25rem;
@@ -1526,6 +1599,13 @@ body {
 .about-info p {
   margin-bottom: 2rem;
   text-align: justify;
+}
+
+@media (min-width: 1024px) {
+  .about-info p {
+    margin-bottom: 3rem;
+    padding-right: 4rem;
+  }
 }
 
 /** POPULAR **/
@@ -1572,6 +1652,18 @@ body {
   padding-bottom: 3.5rem;
 }
 
+@media (min-width: 1024px) {
+  .popular-container {
+    width: 875px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .popular-container {
+    width: 100%;
+  }
+}
+
 .popuplar-card {
   position: relative;
   margin-bottom: 1rem;
@@ -1583,6 +1675,13 @@ body {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   padding-top: 2rem;
+}
+
+@media (min-width: 1024px) {
+  .popuplar-card {
+    margin-bottom: 3rem;
+    width: 258px;
+  }
 }
 
 .popuplar-card h1, 
@@ -1612,6 +1711,12 @@ body {
   padding-left: 1.5rem;
   padding-bottom: 1.25rem;
   padding-right: 0px;
+}
+
+@media (min-width: 1024px) {
+  .popuplar-card img {
+    width: 11rem;
+  }
 }
 
 .popuplar-card:hover img {
@@ -1739,6 +1844,12 @@ body {
   justify-self: center;
 }
 
+@media (min-width: 1024px) {
+  .features-group img {
+    width: 200px;
+  }
+}
+
 .features-card {
   position: absolute;
   width: 112px;
@@ -1756,9 +1867,23 @@ body {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+@media (min-width: 1024px) {
+  .features-card {
+    width: 128px;
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
 .card-1 {
   top: 4rem;
   left: 1.5rem;
+}
+
+@media (min-width: 1024px) {
+  .card-1 {
+    left: -1rem;
+  }
 }
 
 .card-2 {
@@ -1766,9 +1891,22 @@ body {
   right: 1rem;
 }
 
+@media (min-width: 1024px) {
+  .card-2 {
+    right: -2rem;
+  }
+}
+
 .card-3 {
   left: 1.5rem;
   bottom: 2rem;
+}
+
+@media (min-width: 1024px) {
+  .card-3 {
+    left: -1rem;
+    bottom: 7rem;
+  }
 }
 
 .featured-card h3 {
@@ -1798,6 +1936,21 @@ body {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@media (min-width: 640px) {
+  .features-map {
+    left: 0px;
+    right: 0px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .features-map {
+    top: 3rem;
+    left: -8rem;
+    width: 650px;
+  }
+}
+
 /** CARS **/
 
 .cars .title {
@@ -1805,7 +1958,7 @@ body {
   padding-left: 1rem;
 }
 
-.card-container {
+.car-container {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
@@ -1814,37 +1967,43 @@ body {
 }
 
 @media (min-width: 640px) {
-  .card-container {
+  .car-container {
     max-width: 640px;
   }
 }
 
 @media (min-width: 768px) {
-  .card-container {
+  .car-container {
     max-width: 768px;
   }
 }
 
 @media (min-width: 1024px) {
-  .card-container {
+  .car-container {
     max-width: 1024px;
   }
 }
 
 @media (min-width: 1280px) {
-  .card-container {
+  .car-container {
     max-width: 1280px;
   }
 }
 
 @media (min-width: 1536px) {
-  .card-container {
+  .car-container {
     max-width: 1536px;
   }
 }
 
-.card-container {
+.car-container {
   padding-top: 2rem;
+}
+
+@media (min-width: 1280px) {
+  .car-container {
+    padding-bottom: 5rem;
+  }
 }
 
 .car-filters {
@@ -1946,9 +2105,30 @@ body {
   display: grid;
   grid-template-columns: 300px;
   justify-content: center;
-  row-gap: 2.5rem;
+  gap: 2rem;
   padding-top: 3rem;
   padding-bottom: 5rem;
+}
+
+@media (min-width: 640px) {
+  .car-content {
+    grid-template-columns: repeat(2, 228px);
+  }
+}
+
+@media (min-width: 1024px) {
+  .car-content {
+    grid-template-columns: repeat(3, 248px);
+    gap: 4rem;
+    padding-bottom: 3rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .car-content {
+    grid-template-columns: repeat(4, 252px);
+    gap: 3rem;
+  }
 }
 
 .car-card {
@@ -2096,7 +2276,27 @@ h3.car-price {
 
 .offer-container {
   display: grid;
+  grid-template-rows: -webkit-max-content 224px;
+  grid-template-rows: max-content 224px;
   gap: 1.5rem;
+}
+
+@media (min-width: 640px) {
+  .offer-container {
+    grid-template-columns: .5fr;
+    grid-template-rows: initial;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1024px) {
+  .offer-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-items: center;
+    -moz-column-gap: 5rem;
+         column-gap: 5rem;
+    padding-bottom: 2rem;
+  }
 }
 
 .offer-bg {
@@ -2120,6 +2320,19 @@ h3.car-price {
   text-align: center;
 }
 
+@media (min-width: 640px) {
+  .offer-info {
+    margin-bottom: 4rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .offer-info {
+    margin-bottom: 0px;
+    text-align: left;
+  }
+}
+
 .offer-info h2 {
   margin-bottom: 2rem;
   font-size: 1.5rem;
@@ -2133,12 +2346,26 @@ h3.car-price {
   margin-bottom: 3rem;
 }
 
+@media (min-width: 1024px) {
+  .offer-info p {
+    padding-right: 5rem;
+  }
+}
+
 .offer-img {
   position: absolute;
   bottom: 2rem;
   right: -5rem;
   width: 500px;
   max-width: initial;
+}
+
+@media (min-width: 640px) {
+  .offer-img {
+    position: relative;
+    bottom: initial;
+    right: initial;
+  }
 }
 
 /** FOOTER **/
@@ -2151,6 +2378,18 @@ h3.car-price {
 .footer .shape-small, 
 .footer .shape-big {
   position: absolute;
+}
+
+.footer .shape-big {
+  left: -12rem;
+  top: 6rem;
+  height: 300px;
+  width: 300px;
+}
+
+.footer .shape-small {
+  top: -13rem;
+  bottom: -6rem;
 }
 
 .footer-container {
@@ -2192,6 +2431,175 @@ h3.car-price {
 }
 
 .footer-container {
+  position: relative;
   display: grid;
-  gap: 1.5rem;
+  row-gap: 2.5rem;
+}
+
+@media (min-width: 768px) {
+  .footer-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+  .footer-container {
+    grid-template-columns: repeat(4, -webkit-max-content);
+    grid-template-columns: repeat(4, max-content);
+    justify-content: space-between;
+  }
+}
+
+.footer-logo {
+  transition: .3s;
+  margin-bottom: 1.25rem;
+  display: inline-flex;
+  align-items: center;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: hsl(219 8% 95% / var(--tw-text-opacity));
+}
+
+.footer-logo:hover {
+  --tw-text-opacity: 1;
+  color: rgb(218 175 4 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .footer-logo {
+    -moz-column-gap: 0.75rem;
+         column-gap: 0.75rem;
+  }
+}
+
+.footer-logo i {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(218 175 4 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .footer-logo i {
+    font-size: 2rem;
+  }
+}
+
+.footer-title {
+  margin-bottom: 1.25rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+}
+
+.footer-links, 
+.footer-social {
+  transition: .3s;
+  --tw-text-opacity: 1;
+  color: hsl(219 8% 75% / var(--tw-text-opacity));
+}
+
+.footer-links a:hover, 
+.footer-social a:hover {
+  --tw-text-opacity: 1;
+  color: hsl(219 8% 95% / var(--tw-text-opacity));
+}
+
+.footer-social {
+  display: flex;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
+.footer-social a {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.footer-copy {
+  margin-top: 4rem;
+  display: block;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.footer-copy a {
+  --tw-text-opacity: 1;
+  color: hsl(219 8% 95% / var(--tw-text-opacity));
+}
+
+.footer-copy a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(218 175 4 / var(--tw-text-opacity));
+}
+
+/** SCROLL BAR **/
+
+::-webkit-scrollbar {
+  height: .4rem;
+  width: .4rem;
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: hsl(219 4% 16% / var(--tw-bg-opacity));
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: hsl(219 4% 24% / var(--tw-bg-opacity));
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsla(0, 0%, 100%, .1);
+}
+
+/** SCROLLUP **/
+
+.scrollup {
+  transition: .3s;
+  position: fixed;
+  right: 1rem;
+  bottom: -30%;
+  z-index: 10;
+  display: inline-flex;
+  align-items: center;
+  border-radius: 0.25rem;
+  background-color: hsla(0, 0%, 100%, .1);
+  padding: .45rem;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.scrollup:hover {
+  --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.show-scroll {
+  bottom: 3rem;
+}
+
+@media (min-width: 1024px) {
+  .lg\:pb-12 {
+    padding-bottom: 3rem;
+  }
 }
